# TCGA-lung-multiomics

./: .gitignore  README.md  config.toml  main.py  pipeline.py  pyproject.toml
scripts/: 01_generate_manifests.py  02_download.py  02_download.sh  03_download_resume.py  04_build_tables.py  05_filter_tables.py  align_manifests.py  build_cohort.py  build_tables.py  download.py  download_aligned.py  filter_tables.py  gdc_download.sh  generate_manifests.py
